# scientific-calculator

./: .main.cpp.swp  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  calculator.cpp  calculator.h  deploy.yml  main.cpp  test_calculator  test_calculator.cpp
